name:                Graphen
version:             0.1.0.0
synopsis:            Simple experimental graph library for small projects
description:         The Graphen graph library is designed for educational
                     purposes and to understand the mathematical representation
                     of graphs and algorithms and operations on them.
license:             MIT
license-file:        LICENSE
author:              Fritz Grimpen
maintainer:          fritz@grimpen.net
copyright:           (c) 2015 Fritz Grimpen
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.Graphen
  build-depends:       base >=4.8
  default-language:    Haskell2010
